
[FEATURE] PlayerActor only keeps one unsent gamestate in memory.
[FEATURE] PlayerActor sends damage reports in bulk -> better compression.
[FEATURE] All compressed data is now sent with the same method, reducing complexity.
[FEATURE] Weapon rework, now all rules are simply weapon special features.
[FEATURE] Proper single missile attack handling.

	Fixed

[BUG] Vehicle motive hit rolls modified by vechile type could get results over 12.

[BUG] Forced critical hits (such as that from AC AP ammo) would inflict critical hits 
      against targets which could not take critical hits (such as infantry).

[BUG] Critical hit modifiers might cause result selection to go out-of-bounds.
[BUG] Melee charge by ground vehicles worked incorrectly to non-prone mechs.
[BUG] SRMs and other non-1 clusterdamage weapons did incorrect damage to infantry.
[BUG] Grafana bar graph does not display zero for intervals which are zero.
[BUG] Grafana login is admin/admin.
[BUG] Joining games with a password does not work from the modal dialog.
[BUG] Deleting a damage report does not refresh.
[BUG] Unit name is not saved correctly when saving into unit repository.
[BUG] Game list does not refresh automatically / at all.

[BUG] Task for resolving a turn was ignored so exceptions could not be caught. User received no information at all about errors.

[BUG] Charge attacks did not work against units which could not take motive hits.
[BUG] Selecting any tab other than Server with no game connection crashes the client.
[BUG] Selecting a weapon item may select another item with a similar name.
[BUG] Cannot set <no target>
[BUG] Grey inactive weapons do not read "inactive"
[BUG] Faulty unit breaks the whole game instead of discarding invalid values.
[BUG] LBX shooting VTOL: "hit modifier from weapon features"
[BUG] Toggle static parameters does nothing.
[BUG] Unit that cannot hit still produces a damage report.
[BUG] If absolutely no weapons are not active, damage report is still produced.