@@ -22,8 +22,8 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
-    <PackageReference Include="Faemiyah.BtDamageResolver.Api" Version="0.0.379" />
-    <PackageReference Include="Faemiyah.BtDamageResolver.Common" Version="0.0.379" />
+    <PackageReference Include="Faemiyah.BtDamageResolver.Api" Version="0.0.380" />
+    <PackageReference Include="Faemiyah.BtDamageResolver.Common" Version="0.0.380" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
   </ItemGroup>
