@@ -55,9 +55,6 @@ else
     }
 }
 
-<!-- This is here because we only want exactly one /-->
-<div id="resolver_tooltip_paperdoll" class="resolver_div_tooltip" display="none" style="position: absolute; display: none;"></div>
-
 @code
 {
     [Parameter]
