@@ -63,9 +63,13 @@
 [FEATURE] All compressed data is now sent with the same method, reducing complexity.
 [FEATURE] Weapon rework, now all rules are simply weapon special features.
 [FEATURE] Proper single missile attack handling.
+[FEATURE] Weapon bays.
+[FEATURE] Capital ships.
 
 	Fixed
 
+[BUG] Damage tooltip not visible in damagereports screen, only in dashboard.
+[BUG] Regression bug with weapons which do not have properties before ammo gets applied.
 [BUG] Vehicle motive hit rolls modified by vechile type could get results over 12.
 
 [BUG] Forced critical hits (such as that from AC AP ammo) would inflict critical hits 
